# imdb-scraper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: format.py
scraper/: imdb.py
