[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imdb-scraper"
version = "0.1.0"
description = "Playwright + BeautifulSoup IMDb search scraper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.46.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
imdb = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper", "data"]
